--- a/overrides/main.html
+++ b/overrides/main.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="{{ config.site_name }}">
   <meta property="og:description" content="Complete stack for building data products. Write SQL or Python models, get CI/CD, testing, data quality, and API generation. Scales from thousands to billions.">
   <meta property="og:url" content="{{ config.site_url }}">
-  <meta property="og:image" content="{{ config.site_url }}/assets/images/D_logo_dark-32px.png">
+  <meta property="og:image" content="{{ config.site_url }}{{ 'assets/images/D_logo_dark-32px.png' | url }}">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="32">
   <meta property="og:image:height" content="32">
@@ -25,5 +25,5 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ config.site_name }}">
   <meta name="twitter:description" content="Complete stack for building data products. Write SQL or Python models, get CI/CD, testing, data quality, and API generation. Scales from thousands to billions.">
-  <meta name="twitter:image" content="{{ config.site_url }}/assets/images/D_logo_dark-32px.png">
+  <meta name="twitter:image" content="{{ config.site_url }}{{ 'assets/images/D_logo_dark-32px.png' | url }}">
 {% endblock %}
