--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,20 +10,15 @@
   {# Apple touch icon #}
   <link rel="apple-touch-icon" sizes="32x32" href="{{ 'assets/images/D_logo_dark-32px.png' | url }}">
   
-  {# Open Graph meta tags for better link previews #}
+  {# Open Graph meta tags for link previews (no image to avoid broken previews) #}
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{ config.site_name }}">
-  <meta property="og:description" content="Complete stack for building data products. Write SQL or Python models, get CI/CD, testing, data quality, and API generation. Scales from thousands to billions.">
+  <meta property="og:description" content="Complete stack for building data products. Write SQL or Python models, get CI/CD, testing, data quality, and API generation.">
   <meta property="og:url" content="{{ config.site_url }}">
-  <meta property="og:image" content="{{ config.site_url }}/assets/images/D_logo_dark-32px.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="32">
-  <meta property="og:image:height" content="32">
   <meta property="og:site_name" content="{{ config.site_name }}">
   
-  {# Twitter Card meta tags #}
+  {# Twitter Card meta tags (no image to avoid broken previews) #}
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ config.site_name }}">
-  <meta name="twitter:description" content="Complete stack for building data products. Write SQL or Python models, get CI/CD, testing, data quality, and API generation. Scales from thousands to billions.">
-  <meta name="twitter:image" content="{{ config.site_url }}/assets/images/D_logo_dark-32px.png">
+  <meta name="twitter:description" content="Complete stack for building data products. Write SQL or Python models, get CI/CD, testing, data quality, and API generation.">
 {% endblock %}
